fix: prevent overflowing of text on editor

--- a/admin/scss/rexlive/rexbuilder-live/tools/_ckeditor-tools.scss
+++ b/admin/scss/rexlive/rexbuilder-live/tools/_ckeditor-tools.scss
@@ -144,5 +144,6 @@
 	.ck.ck-editor__editable.ck-focused:not(.ck-editor__nested-editable) {
 		border: none;
 		outline: var(--ck-focus-ring);
+		overflow-wrap: initial;
 	}
 }
